--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ futures = "0.3.21"
 futures-timer = "3.0.2"
 ron = "0.7.0"
 serde = { version = "1", features = ["derive"] }
+tap = "1.0.1"
 
 [dependencies.crossterm]
 version = "0.23.2"
